# Muelsyse-CI

./: .gitignore  LICENSE  README.md  docker-compose.yml  todolist.md
control-plane/Muelsyse-CI-HTML-Access/: README.md  package-lock.json  package.json
control-plane/Muelsyse-Web-UI/: package-lock.json  package.json  react-router.config.ts
control-plane/Muelsyse-Web-UI/app/: app.css  root.tsx  routes.ts
control-plane/Muelsyse-Web-UI/app/components/: ClientOnly.tsx
control-plane/Muelsyse-Web-UI/app/lib/: api.ts
control-plane/Muelsyse-Web-UI/app/routes/: _layout.tsx  dashboard.tsx  executions.$id.tsx  executions._index.tsx  home.tsx  pipelines.$id.tsx  pipelines._index.tsx  runners.tsx  secrets.tsx  settings.tsx
control-plane/Muelsyse-Web-UI/docs/: liquid-glass-react.md
control-plane/Python-src/: .env.example  Dockerfile  manage.py
control-plane/Python-src/api/v1/: urls.py
control-plane/Python-src/apps/core/: context.py  (+4 more)
control-plane/Python-src/muelsyse/: asgi.py  celery.py  urls.py  wsgi.py
control-plane/Python-src/requirements/: base.txt  development.txt  production.txt
control-plane/Python-src/websocket/: routing.py
runners/: Cargo.toml  Dockerfile  runner.toml.example
runners/src/: lib.rs  main.rs
runners/src/artifact/: mod.rs  upload.rs
runners/src/client/: http.rs  mod.rs  websocket.rs
runners/src/config/: mod.rs  settings.rs
runners/src/executor/: docker.rs  mod.rs  shell.rs  traits.rs
runners/src/job/: mod.rs  runner.rs
runners/src/log/: mod.rs  streamer.rs
runners/src/utils/: mod.rs  system.rs
yaml/: example-pipeline.yml
(+54 files in other folders)
